Fixed the logic behind the youtube videos not showing properly. Now they are hidden till the javascript is done proccessing them. This removes the flash and the resize on mobile. It also should save some bandwidth and hopefully CPU.

--- a/sites/all/themes/lapcat/assets/less/footer.less
+++ b/sites/all/themes/lapcat/assets/less/footer.less
@@ -7,6 +7,7 @@ footer {
   .copyright{
     color:@colorLight60;
     margin-left:1em;
+    text-align:right;
   }
   * { 
     vertical-align:top; 
