--- a/sites/all/themes/lapcat/assets/less/layout.less
+++ b/sites/all/themes/lapcat/assets/less/layout.less
@@ -642,7 +642,7 @@ article{
   height: 100%;
 }
 iframe{
-  display:hidden;
+  display:none;
 }
 
 
